[package]
name = "solana-amm-arb-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
borsh = "1.5.7"
base64 = "0.21"
dialoguer = "0.11"
directories = "5"
shellexpand = "3"

solana-client = "2"
solana-sdk = "2"
solana-program = "2"
solana-account-decoder = "2"

spl-token = "8"
spl-associated-token-account = "7"

carbon-core = "0.8"
carbon-raydium-cpmm-decoder = "0.8"
raydium_cpmm = "0.1"